# zermelo-navigation

./: .gitignore  .gitmodules  README.md  environment-flowrl.yaml  environment-zermelo.yaml  pyproject.toml  zermelo_config.yaml
configs/: zermelo_config.yaml
experiments/: meanflowql_results.json  plot_eval_returns.py  sb3_results.json
experiments/offline_baselines/: meanflowql_ogbench_pointmaze.py  meanflowql_pointmaze.py  meanflowql_zermelo.py  train_ppo.py  train_td3.py
experiments/online_baselines/: ogbench_train_sac_online.py  quick_test.py  record_videos.py  train_sac_online.py
experiments/zermelo/: bc_zermelo.py  dt_zermelo.py  meanflowql_zermelo.py
old_experiments/: avg_returns.txt  evaluate_all.py  evaluate_meanflowql.py  evaluate_sb3.py
old_experiments/offline_baselines/: train_baselines2.py
old_experiments/old_pointmaze/: pointmaze.yml  run_baselines.py
old_experiments/online_baselines/: ogbench_train_ppo_online.py  ogbench_train_td3_online.py  train_ppo_online.py  (+1 more)
scripts/: _dataset_common.py  _training_common.py  analyze_rewards.py  bc_zermelo.py  build_hit_cache.py  dt_zermelo.py  evaluate_models.py  gen_reward_components_plot.py  gen_reward_components_train_plot.py  generate_dataset.py  generate_straight_dataset.py  launch_experiment.sh  launch_trainings.sh  meanflowbc_zermelo.py  meanflowql_zermelo.py  recompute_rewards.py  run_overnight.sh  sweep_mfql.sh  test_env.py  trim_dataset.py  visualize.py
zermelo_env/: hit_cache.py  hit_chain.py  tgv-static.py  zermelo_config.py  zermelo_flow.py  zermelo_maze.py  zermelo_point.py
(+24 files in other folders)
